Bug 510217 - Scheduled transaction: Overridden value when entering transaction ignored
Summary: Scheduled transaction: Overridden value when entering transaction ignored
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-04 08:57 UTC by Lawrence Wright
Modified: 2025-10-04 12:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lawrence Wright 2025-10-04 08:57:05 UTC
SUMMARY

When entering an instance of a scheduled transaction, if you override the value from the schedule with an updated value, the updated value is ignored.

STEPS TO REPRODUCE
1. Create a new Scheduled Transaction with a particular value, e.g. 10.00
2. Right click and Enter the Scheduled Transaction
3. Override the value with a different one, e.g. 20.00

OBSERVED RESULT

Transaction posts with value 10.00

EXPECTED RESULT

Transaction posts with value 20.00

SOFTWARE/OS VERSIONS
Windows: 11 24H2
KMyMoney: 5.2.1-0683f36

ADDITIONAL INFORMATION

Issue occurs regardless of whether the scheduled transaction is set up as "estimated" or not.
Overriding the date with a different one DOES get applied correctly.
Comment 1 Thomas Baumgart 2025-10-04 09:25:04 UTC
I am unable to duplicate this (using Version 5.2.1-0f3b711 but there were no changes regarding schedules between the one you used and this one). After changing the value and entering the scheduled transaction, do you see a dialog with a question how to handle the change? What is your answer? In case all these steps seem OK for you, please explain exactly what you do. Mention any mouse click or button press on the way.
Comment 2 Lawrence Wright 2025-10-04 09:36:03 UTC
Hi Thomas,

Thanks for that query - I think it's helped me narrow the issue!

* If I mouse-click "Enter" on the "Enter Schedule" dialog I get prompted with the "Confirm Manual Enter" dialog highlighting the changed value
* If I just hit Enter on the keyboard on the "Enter Schedule" dialog, I *don't* get prompted with the "Confirm Manual Enter" dialog

Let me know if you need any further detail or a screen recording.

Thanks!

Lawrence.
Comment 3 Lawrence Wright 2025-10-04 09:37:33 UTC
(In reply to Lawrence Wright from comment #2)

I should confirm, mouse click = everything works correctly, enter on keyboard = I get the issue
Comment 4 Thomas Baumgart 2025-10-04 12:12:54 UTC
Git commit deb302916401bd85c8a70eb59568c5e27c314faf by Thomas Baumgart.
Committed on 04/10/2025 at 12:04.
Pushed by tbaumgart into branch 'master'.

Use modified values when pressing Return key

When entering an instance of a scheduled transaction, if one overrides the value
from the schedule with an updated value, the updated value is ignored when
the return key is pressed while the focus is still in the amount widget. This change
resolves the issue.
FIXED-IN: 5.2.2

M  +18   -0    kmymoney/views/kenterscheduledlg.cpp
M  +3    -0    kmymoney/views/kenterscheduledlg.h

https://invent.kde.org/office/kmymoney/-/commit/deb302916401bd85c8a70eb59568c5e27c314faf
Comment 5 Thomas Baumgart 2025-10-04 12:32:50 UTC
Git commit 14d2930d2934cdaa5e0427d12983ab180af1356b by Thomas Baumgart.
Committed on 04/10/2025 at 12:13.
Pushed by tbaumgart into branch '5.2'.

Use modified values when pressing Return key

When entering an instance of a scheduled transaction, if one overrides the value
from the schedule with an updated value, the updated value is ignored when
the return key is pressed while the focus is still in the amount widget. This change
resolves the issue.
FIXED-IN: 5.2.2
(cherry picked from commit deb302916401bd85c8a70eb59568c5e27c314faf)

M  +18   -0    kmymoney/views/kenterscheduledlg.cpp
M  +3    -0    kmymoney/views/kenterscheduledlg.h

https://invent.kde.org/office/kmymoney/-/commit/14d2930d2934cdaa5e0427d12983ab180af1356b