Use modified values when pressing Return key

When entering an instance of a scheduled transaction, if one overrides the value
from the schedule with an updated value, the updated value is ignored when
the return key is pressed while the focus is still in the amount widget. This change
resolves the issue.

BUG: 510217
FIXED-IN: 5.2.2
(cherry picked from commit deb302916401bd85c8a70eb59568c5e27c314faf)